# docops-python

./: .cspell.json  .editorconfig  .gitignore  .ignore  .markdownlint.yaml  .prettierrc.yml  .prospector.yaml  .textlintrc.yml  .vale.ini  .vocab.txt  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.docops/: vocab.txt
.docops/cspell/: dict.txt
src/doitintl/docops/: .gitignore  __init__.py
src/doitintl/docops/cli/: __init__.py
src/doitintl/docops/cli/cmds/: __init__.py  run.py  script.py
src/doitintl/docops/core/: script.py
src/doitintl/docops/devkit/: __init__.py
src/doitintl/docops/devkit/cli/: __init__.py
src/doitintl/docops/devkit/cli/cmds/: __init__.py  lint.py
src/doitintl/docops/devkit/core/: app.py
src/doitintl/docops/devkit/runners/: __init__.py  lint.py
src/doitintl/docops/devkit/wrappers/: __init__.py  cspell.py  ec.py
src/doitintl/docops/scripts/: brok.sh  cspell.sh  ec.sh  fdupes.sh  git-clean.sh  good-filenames.sh  html-entities.sh  imgdup2go.sh  inline-html.sh  lintspaces.sh  markdown-link-check.sh  markdownlint.sh  misspell.sh  only-ascii.sh  optipng.sh  prettier.sh  rm-unused-assets.sh  rm-unused-docs.sh  shellcheck.sh  shfmt.sh  telemetry-assets.sh  telemetry-index.sh  textlint.sh  update-vocab.sh  vale-server.sh  vale.sh  yamllint.sh
