[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
name = "doitintl-docops"
version = "0.0.0-a0"
description = "DoiT International DocOps Development Kit"
authors = ["DoiT International <engineering@doit-intl.com>"]
homepage = "https://github.com/doitintl/docops-python"
repository = "https://github.com/doitintl/docops-python"
readme = "README.md"
keywords = [
  "cicd",
  "cli",
  "docops",
  "docs",
  "linting",
  "qa-automation",
  "testing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
packages = [{ include = "doitintl", "from" = "src" }]

[tool.poetry.scripts]
docops = "doitintl.docops.cli.cmds:main"

[tool.poetry.dependencies]
click = "^8.1.2"
isort = "^5.10.1"
python = "^3.9"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
dodgy = "^0.2.1"
flake8 = "^4.0.1"
poetry = "^1.1.13"
pydocstyle = "^6.1.1"
pylint = "^2.13.4"
pyroma = "^4.0b2"
vulture = "^2.3"

[tool.pydocstyle]
ignore = ['D211', 'D213', 'D400', 'D415']

[tool.pylint.messages_control]
max-line-length = 79

[tool.vulture]
min_confidence = 80
